* What's new in version 4.3, PRERELEASE

* What's new in version 4.2, 2019-11-18

- The process(EXE).begin probe handlers are now always triggered for
  already-running target processes.

- Initial support for multi-dimensional supports has been added to
  the stapbpf backend. Note that these arrays cannot be iterated upon
  with a foreach loop.

- The stapbpf backend now supports sorting by value in foreach loops.

- The stapbpf backend now supports the concatenation operator for
  userspace probes.

- The stapbpf backend now supports the target() function and -x option.

- The gettimeofday_* functions are now provided for the stapbpf backend.

- The values of an array can now be iterated over in foreach loops in 
  the stapbpf backend. They are no longer defaulted to 0.

- The stapbpf backend now supports order parameterization for begin
  and end probes.

- When the -v option is set along with -L option, the output includes
  duplicate probe points which are distinguished by their PC address.

- The stapbpf backend now supports stap-exporter extensions. 

- The stapbpf backend now supports procfs probes. The implementation 
  uses FIFO special files in /var/tmp/systemtap-$EFFUSER/MODNAME instead 
  of the proc filesystem files.

- The eBPF backend now uses bpf raw tracepoints for kernel.trace("*")
  probes.  These have target variable arguments that match the
  arguments available for the traditional linux kernel modules
  tracepoints.  Support for the older bpf tracepoint arguments can be
  forced with a --compatible=4.1 option on the command line.

- New backtracing functions print_[u]backtrace_fileline() have been added
  to the tapset. These functions behave similarly to print_[u]backtrace(),
  the only difference being that file names and line numbers are added
  to the backtrace.

- Now it is possible to issue a backtrace using user specified pc, sp,
  and fp which can be used to generate backtraces of different contexts.