@@ -1,7 +1,7 @@
 .\" t
-.TH ERROR::BUILDID 7stap 
+.TH WARNING::BUILDID 7stap
 .SH NAME
-error::buildid \- build-id verification failures
+warning::buildid \- build-id verification failures
 
 .\" macros
 .de SAMPLE
@@ -50,7 +50,7 @@ man page.
 During translation, systemtap saves a copy of the relevant files'
 build-ids within the compiled modules.  At run-time, the modules
 compare the saved ones to the actual run-time build-ids in memory.
-The error message indicates that they did not match, so the module
+The warning message indicates that they did not match, so the module
 will decline placing a probe that was computed based upon obsolete
 data.  This is important for safety, as placing them at an
 inappropriate address could crash the programs.  However, this is not
@@ -73,7 +73,7 @@ files may not exactly match the main binaries.
 
 .PP
 
-To disable build-id verification errors, if one is confident that they
+To disable build-id verification warnings, if one is confident that they
 are an artefact of build accidents rather than a real mismatch, one
 might try the
 .IR -DSTP_NO_BUILDID_CHECK
