@@ -709,8 +709,12 @@ static int _stp_build_id_check (struct _stp_module *m,
 
   // have two strings, will travel
   if (strcmp (hexstring_practice, hexstring_theory)) {
-          _stp_error ("Build-id mismatch [man error::buildid]: \"%s\" address %#lx, expected %s actual %s\n",
-                      m->path, notes_addr, hexstring_theory, hexstring_practice);
+	  // NB: It is normal for different binaries with the same file path
+	  // coexist in the same system via chroot or namespaces, therefore
+	  // we make sure below is really a warning.
+          _stp_warn ("Build-id mismatch [man warning::buildid]: \"%s\" address "
+		     "%#lx, expected %s actual %s\n",
+                     m->path, notes_addr, hexstring_theory, hexstring_practice);
       return 1;
   }
   
