@@ -2,6 +2,8 @@
 
 * What's new in version 4.2, 2019-11-18
 
+- The "Build-id mismatch" error now becomes a warning.
+
 - The process(EXE).begin probe handlers are now always triggered for
   already-running target processes.
 
